complete config system